--- a/Dunai Krisztián/Float nyers/index.html
+++ b/Dunai Krisztián/Float nyers/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="hu">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,30 +8,50 @@
     <title>Position</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
     <div class="wrapper">
-        <header> 
+        <header>
             <nav>
                 <ul>
                     <li><a href="">Első</a></li>
-                    <li><a href="">Második</a></li>
-                    <li><a href="">Harmadik</a></li>
-                    <li><a href="">Negyedik</a></li>
+                    <li class="has-submenu"><a href="">Második</a>
+                        <ul class="submenu">
+                            <li><a href="">első almenüpont</a></li>
+                            <li><a href="">második almenüpont</a></li>
+                            <li><a href="">harmadik almenüpont</a></li>
+                        </ul>
+                        <li><a href="">Harmadik</a></li>
+                        <li><a href="">Negyedik</a></li>
+                    </li>
                 </ul>
-
             </nav>
+
+
         </header>
         <main>
             <h2>Lorem ipsum</h2>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla ut magna mauris. Nullam nec velit volutpat ante pulvinar placerat. In eu leo tempus, sagittis libero ut, placerat velit. Nunc eget neque egestas, ornare nibh vel, dapibus massa. Praesent non dictum eros. Praesent tellus nunc, eleifend at arcu sit amet, molestie molestie odio. Nullam maximus odio metus, rutrum hendrerit elit maximus eget. Phasellus sed dolor efficitur, congue arcu et, vestibulum metus. In commodo nibh nisi, at convallis massa mollis non. Morbi aliquam risus dui, ut ullamcorper leo molestie vel. Integer tempus dolor non mauris laoreet lobortis. Sed imperdiet accumsan mauris, nec bibendum massa gravida at. Nam facilisis, felis ut congue placerat, nibh dui sollicitudin massa, et suscipit sem ex id nisl. Nullam malesuada lorem eget venenatis suscipit.
-            </p>
-            <p>
-                In eu lorem massa. Suspendisse eu felis metus. In hac habitasse platea dictumst. Vivamus sit amet lorem eget massa consectetur venenatis sed ac urna. Praesent nulla dolor, commodo et eros non, consectetur ullamcorper quam. Sed consectetur neque justo, vitae condimentum ante facilisis eu. Nulla ut sapien ipsum.
-            </p>
-            <p>
-                Mauris vitae mollis est. Nam accumsan risus fringilla, vulputate dolor sed, tincidunt leo. Donec accumsan lacus nec commodo posuere. Ut at sollicitudin urna. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Phasellus scelerisque, lacus nec varius efficitur, nunc elit scelerisque erat, sit amet vulputate sapien lorem at risus. Aliquam cursus venenatis ipsum, sit amet consequat arcu fringilla quis. Sed quis mi convallis, pharetra libero eu, imperdiet ex. Nunc imperdiet dolor quis leo lobortis, ac luctus tortor sodale
-            </p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In feugiat nisi et ante gravida vehicula. Ut pulvinar sollicitudin ante, non placerat odio dignissim a. Morbi interdum augue nec dolor ultricies, at mollis risus mollis. Pellentesque
+                habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Proin pretium tempor mauris, ac venenatis est eleifend quis. Cras efficitur arcu eget urna luctus aliquet. Quisque sit amet diam in ipsum gravida pharetra.</p>
+            <p>Morbi ut lobortis quam. Praesent eget lacus orci. Duis a euismod sem. Morbi ut enim vel massa mattis efficitur quis eu tellus. Integer non dui eget ex scelerisque eleifend. Suspendisse eleifend massa risus, at rhoncus eros fringilla ac. Nullam
+                nibh nibh, molestie et neque a, euismod commodo justo. Sed sodales mauris odio, sit amet condimentum ipsum egestas vel. Praesent eget nibh arcu. Praesent non augue convallis, accumsan quam eu, consectetur diam. Etiam sodales turpis lorem,
+                non vehicula massa sodales sit amet. Sed facilisis nibh quis leo ultrices convallis.</p>
+            <p>Curabitur mauris turpis, facilisis in arcu ut, ultrices vehicula velit. Sed a gravida metus, eget feugiat orci. Nullam dapibus eget nibh a hendrerit. Aliquam ultricies aliquet nunc, vel sagittis elit fringilla eu. Nullam efficitur sapien quis
+                nulla sodales, et consequat ligula feugiat. Etiam fringilla, lectus eu maximus porttitor, diam arcu semper nisl, at ornare felis lorem et enim. Cras vulputate elit purus, non interdum augue iaculis vitae. Morbi facilisis tempus commodo.
+                Sed condimentum est sem, eget congue enim fermentum sed. Morbi porta, mi at interdum tempus, nulla nisi viverra enim, sed eleifend est neque quis lacus. Maecenas a rutrum est, ac molestie orci. Quisque justo turpis, blandit at est et,
+                dignissim interdum arcu. Suspendisse convallis ante non mi rhoncus consequat. Duis hendrerit est est, vitae accumsan dolor tincidunt quis. Suspendisse nisl sapien, faucibus non semper non, euismod vel nunc.</p>
+            <p>Sed lobortis mauris nec nibh vulputate, at fringilla tellus feugiat. Etiam non sodales sem, sit amet pretium mauris. Morbi bibendum elementum vehicula. Nullam lectus metus, rhoncus sed ullamcorper ut, aliquet nec sapien. Praesent varius aliquam
+                vestibulum. Ut dignissim, sapien nec lobortis elementum, elit elit rhoncus orci, vitae accumsan ante mauris vel nulla. Nunc congue, sem in egestas sagittis, eros lacus gravida leo, eu porta turpis velit ac enim. Nam tincidunt ante in mauris
+                interdum mollis. Donec finibus est nec fringilla eleifend.</p>
+
         </main>
+
+    </div>
+<div class="cookie-accept">
+    Cookie szabályzat
+    <button>Elfogadom</button>
+</div>
+
 </body>
+
 </html>
