--- a/Balogh Ádám/floatnyers/index.html
+++ b/Balogh Ádám/floatnyers/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="hu">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,36 +8,51 @@
     <title>Position</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
     <div class="wrapper">
         <header>
             <nav>
                 <ul>
-                    <li><a href="">Első</a></li> 
-                    <li  class="has-submenu"><a href="">Második</a></li>
-                    <ul class="submenu">
-                        <li><a href="">első almenüpont</a></li>
-                        <li><a href="">második almenüpont</a></li>
-                        <li><a href="">harmadik almenüpont</a></li>
-                    </ul>
-                    <li><a href="">Harmadik</a></li>
-                    <li><a href="">Negyedik</a></li>
-
-
-
-
+                    <li><a href="">Első</a></li>
+                    <li class="has-submenu"><a href="">Második</a>
+                        <ul class="submenu">
+                            <li><a href="">első almenüpont</a></li>
+                            <li><a href="">második almenüpont</a></li>
+                            <li><a href="">harmadik almenüpont</a></li>
+                        </ul>
+                        <li><a href="">Harmadik</a></li>
+                        <li><a href="">Negyedik</a></li>
+                    </li>
                 </ul>
             </nav>
+
 
         </header>
         <main>
             <h2>Lorem ipsum</h2>
-            <p>Nunc sit amet magna est. Donec tortor nunc, tincidunt quis felis sit amet, iaculis ornare mi. Cras pharetra erat in hendrerit mollis. Aenean ipsum diam, imperdiet vitae sem ut, condimentum bibendum nibh. Sed ut elementum massa. In vel dui id ligula aliquam feugiat fringilla et tellus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Etiam a orci at augue sollicitudin commodo in eget lectus. Nam non arcu quam. In dictum efficitur lectus. Ut elementum arcu in sem aliquam gravida. Nulla eu eros felis. Nulla commodo quis nisi eget consequat.</p><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed efficitur ante a accumsan condimentum. Fusce id mi iaculis, imperdiet nulla at, efficitur urna. Nunc pretium, odio vel sollicitudin dictum, ex sem porttitor lacus, id auctor erat justo ac ante. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nulla molestie nisl vitae sem fermentum, ac efficitur leo congue. Pellentesque suscipit ligula quam, quis rutrum mauris malesuada ut. Vestibulum sagittis dui sodales turpis convallis iaculis. Praesent vestibulum diam imperdiet bibendum scelerisque. Proin a elit sem.</p><p>Etiam molestie nisl non lorem scelerisque ultricies. Maecenas eu erat vulputate, posuere justo eu, ultrices purus. Nam eros tellus, laoreet ac porta non, euismod et leo. Sed egestas cursus justo vel sollicitudin. Curabitur vestibulum felis mattis enim eleifend, a porttitor leo tristique. Donec et tincidunt risus. Phasellus quis massa nec tellus tempor euismod ac at ipsum. Sed auctor lacus sit amet posuere lobortis. Ut condimentum eu augue sed ullamcorper.</p><p>Proin sodales pellentesque turpis, placerat posuere arcu vehicula et. Aenean blandit sed enim eget rhoncus. Etiam eu mollis urna. Fusce id diam vitae orci tristique molestie. Sed et ante ac mauris molestie imperdiet. Nam laoreet hendrerit augue, et faucibus felis blandit quis. Nam elit massa, pellentesque fermentum pharetra id, mollis sit amet nunc. Sed vehicula, lacus vel molestie sollicitudin, enim nulla feugiat mi, aliquet malesuada quam erat non nulla. Vestibulum suscipit convallis dignissim. Donec urna enim, pretium non ante venenatis, tempus ultrices risus. Donec vel mollis mauris. Nulla commodo vitae eros ac maximus. Nunc venenatis dolor elit, ac feugiat sem posuere sit amet.s</p>
-
-            
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In feugiat nisi et ante gravida vehicula. Ut pulvinar sollicitudin ante, non placerat odio dignissim a. Morbi interdum augue nec dolor ultricies, at mollis risus mollis. Pellentesque
+                habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Proin pretium tempor mauris, ac venenatis est eleifend quis. Cras efficitur arcu eget urna luctus aliquet. Quisque sit amet diam in ipsum gravida pharetra.</p>
+            <p>Morbi ut lobortis quam. Praesent eget lacus orci. Duis a euismod sem. Morbi ut enim vel massa mattis efficitur quis eu tellus. Integer non dui eget ex scelerisque eleifend. Suspendisse eleifend massa risus, at rhoncus eros fringilla ac. Nullam
+                nibh nibh, molestie et neque a, euismod commodo justo. Sed sodales mauris odio, sit amet condimentum ipsum egestas vel. Praesent eget nibh arcu. Praesent non augue convallis, accumsan quam eu, consectetur diam. Etiam sodales turpis lorem,
+                non vehicula massa sodales sit amet. Sed facilisis nibh quis leo ultrices convallis.</p>
+            <p>Curabitur mauris turpis, facilisis in arcu ut, ultrices vehicula velit. Sed a gravida metus, eget feugiat orci. Nullam dapibus eget nibh a hendrerit. Aliquam ultricies aliquet nunc, vel sagittis elit fringilla eu. Nullam efficitur sapien quis
+                nulla sodales, et consequat ligula feugiat. Etiam fringilla, lectus eu maximus porttitor, diam arcu semper nisl, at ornare felis lorem et enim. Cras vulputate elit purus, non interdum augue iaculis vitae. Morbi facilisis tempus commodo.
+                Sed condimentum est sem, eget congue enim fermentum sed. Morbi porta, mi at interdum tempus, nulla nisi viverra enim, sed eleifend est neque quis lacus. Maecenas a rutrum est, ac molestie orci. Quisque justo turpis, blandit at est et,
+                dignissim interdum arcu. Suspendisse convallis ante non mi rhoncus consequat. Duis hendrerit est est, vitae accumsan dolor tincidunt quis. Suspendisse nisl sapien, faucibus non semper non, euismod vel nunc.</p>
+            <p>Sed lobortis mauris nec nibh vulputate, at fringilla tellus feugiat. Etiam non sodales sem, sit amet pretium mauris. Morbi bibendum elementum vehicula. Nullam lectus metus, rhoncus sed ullamcorper ut, aliquet nec sapien. Praesent varius aliquam
+                vestibulum. Ut dignissim, sapien nec lobortis elementum, elit elit rhoncus orci, vitae accumsan ante mauris vel nulla. Nunc congue, sem in egestas sagittis, eros lacus gravida leo, eu porta turpis velit ac enim. Nam tincidunt ante in mauris
+                interdum mollis. Donec finibus est nec fringilla eleifend.</p>
 
         </main>
 
     </div>
+    <div class="cookie-accept">
+        Cookie szabályzat
+        <button>Elfogadom</button>
+
+    </div>
+
 </body>
+
 </html>
