--- a/Kis-Fodor Zsombor/html/position/position.html
+++ b/Kis-Fodor Zsombor/html/position/position.html
@@ -13,7 +13,12 @@
             <nav>
                 <ul>
                     <li><a href="">első</a></li>
-                    <li><a href="">második</a></li>
+                    <li class="has-submenu"><a href="">második</a></li>
+                    <ul class="submenu">
+                        <li><a href="">első almenüpont</a></li>
+                        <li><a href="">második almenüpont</a></li>
+                        <li><a href="">harmadik almenüpont</a></li>
+                    </ul>
                     <li><a href="">harmadik</a></li>
                     <li><a href="">negyedik</a></li>
                 </ul>
