--- a/Kis-Fodor Zsombor/ikt projektmunka/menuoldal.html
+++ b/Kis-Fodor Zsombor/ikt projektmunka/menuoldal.html
@@ -14,5 +14,7 @@
     <p><a href="index1.html" class="oldalak">Firebird oldal</a></p>
     <p><a href="RS2V.html" class="oldalak">Rising Storm 2: Vietnam oldal</a></p>
 
+    <h2>Kiss-Fodor Zsombor, Szöllösy Marcell, Jankovics Dávid, Halmos Benjáim</h2>
+
 </body>
 </html>
