--- a/Kis-Fodor Zsombor/ikt projektmunka/index1.html
+++ b/Kis-Fodor Zsombor/ikt projektmunka/index1.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../html/random Pontiac Firebird oldal/hatter.css">
-    <link rel="icon" href="../pics/Pontiac_logoflat.png">
+    <link rel="stylesheet" href="hatter.css">
+    <link rel="icon" href="Pontiac_logoflat.png">
     <title>Pontiac Firebird</title>
 </head>
 <body>
