--- a/Fekete Zoltán/Flexbox_nyers/index.html
+++ b/Fekete Zoltán/Flexbox_nyers/index.html
@@ -65,18 +65,18 @@
 		
 		<aside>
 			<ul>
-				<li><a href="">Quisque dictum mattis massa, sit amet mattis ex venenatis quis. Donec sollicitudin dui purus, ac mattis ipsum convallis sed. Nulla sit amet ipsum vitae turpis pretium molestie at sit amet enim.</a></li>
-				<li><a href="">Quisque dictum mattis massa, sit amet mattis ex venenatis quis. Donec sollicitudin dui purus, ac mattis ipsum convallis sed. Nulla sit amet ipsum vitae turpis pretium molestie at sit amet enim.</a></li>
-				<li><a href="">Quisque dictum mattis massa, sit amet mattis ex venenatis quis. Donec sollicitudin dui purus, ac mattis ipsum convallis sed. Nulla sit amet ipsum vitae turpis pretium molestie at sit amet enim.</a></li>
-				<li><a href="">Quisque dictum mattis massa, sit amet mattis ex venenatis quis. Donec sollicitudin dui purus, ac mattis ipsum convallis sed. Nulla sit amet ipsum vitae turpis pretium molestie at sit amet enim.</a></li>
-				<li><a href="">Quisque dictum mattis massa, sit amet mattis ex venenatis quis. Donec sollicitudin dui purus, ac mattis ipsum convallis sed. Nulla sit amet ipsum vitae turpis pretium molestie at sit amet enim.</a></li>
-				<li><a href="">Quisque dictum mattis massa, sit amet mattis ex venenatis quis. Donec sollicitudin dui purus, ac mattis ipsum convallis sed. Nulla sit amet ipsum vitae turpis pretium molestie at sit amet enim.</a></li>
-				<li><a href="">Quisque dictum mattis massa, sit amet mattis ex venenatis quis. Donec sollicitudin dui purus, ac mattis ipsum convallis sed. Nulla sit amet ipsum vitae turpis pretium molestie at sit amet enim.</a></li>
-				<li><a href="">Quisque dictum mattis massa, sit amet mattis ex venenatis quis. Donec sollicitudin dui purus, ac mattis ipsum convallis sed. Nulla sit amet ipsum vitae turpis pretium molestie at sit amet enim.</a></li>
-				<li><a href="">Quisque dictum mattis massa, sit amet mattis ex venenatis quis. Donec sollicitudin dui purus, ac mattis ipsum convallis sed. Nulla sit amet ipsum vitae turpis pretium molestie at sit amet enim.</a></li>
-				<li><a href="">Quisque dictum mattis massa, sit amet mattis ex venenatis quis. Donec sollicitudin dui purus, ac mattis ipsum convallis sed. Nulla sit amet ipsum vitae turpis pretium molestie at sit amet enim.</a></li>
-				<li><a href="">Quisque dictum mattis massa, sit amet mattis ex venenatis quis. Donec sollicitudin dui purus, ac mattis ipsum convallis sed. Nulla sit amet ipsum vitae turpis pretium molestie at sit amet enim.</a></li>
-				<li><a href="">Quisque dictum mattis massa, sit amet mattis ex venenatis quis. Donec sollicitudin dui purus, ac mattis ipsum convallis sed. Nulla sit amet ipsum vitae turpis pretium molestie at sit amet enim.</a></li>
+				<li><a href="">Quisque dictum mattis massa, sit amet mattis ex venenatis quis.</a></li>
+				<li><a href="">Nam tempus, dolor vitae efficitur luctus, sapien metus dignissim massa, in viverra orci risus sit amet ligula.</a></li>
+				<li><a href="">Donec sollicitudin dui purus, ac mattis ipsum convallis sed.</a></li>
+				<li><a href="">Sed posuere eu risus et tempus.</a></li>
+				<li><a href="">Proin tempor ut magna a placerat.</a></li>
+				<li><a href="">Mauris tristique dolor in neque sollicitudin, vitae aliquet nibh elementum.</a></li>
+				<li><a href="">Nunc et risus nulla. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</a></li>
+				<li><a href="">Curabitur eget elit orci. Curabitur eu tincidunt diam.</a></li>
+				<li><a href="">Morbi vel nisi est. Nam efficitur, tellus et vulputate tincidunt, massa est porta ipsum, vitae vehicula diam ex ac ligula.</a></li>
+				<li><a href="">Mauris ante orci, commodo in accumsan vitae, tincidunt sit amet velit.</a></li>
+				<li><a href="">Proin mollis ante quis nisi egestas, ut sollicitudin mi finibus.</a></li>
+				<li><a href="">Mauris tincidunt ligula sit amet leo finibus, eu pretium nisi dapibus.</a></li>
 				
 			</ul>
 		
