--- a/Fuglovics Konor/flexbox/index.html
+++ b/Fuglovics Konor/flexbox/index.html
@@ -80,13 +80,13 @@
 			<li><a href="">Curabitur tincidunt elit nec lorem malesuada, id porttitor nibh tempor. Nulla ante lacus, porta vel gravida sed, pulvinar ac tellus.</a></li>
 			<li><a href="">Ut condimentum enim odio, vitae dapibus sapien pretium at.</a></li>
 			<li><a href="">Donec ante eros, dignissim hendrerit nibh in, condimentum pellentesque nulla.</a></li>
-			<li><a href=""></a></li>
-			<li><a href=""></a></li>
-			<li><a href=""></a></li>
-			<li><a href=""></a></li>
-			<li><a href=""></a></li>
-			<li><a href=""></a></li>
-			<li><a href=""></a></li>
+			<li><a href="">1</a></li>
+			<li><a href="">2</a></li>
+			<li><a href="">3</a></li>
+			<li><a href="">4</a></li>
+			<li><a href="">5</a></li>
+			<li><a href="">6</a></li>
+			<li><a href="">7</a></li>
 
 		</ul>
 		</aside>
