--- a/Balogh Ádám/flexbox/index.html
+++ b/Balogh Ádám/flexbox/index.html
@@ -67,7 +67,29 @@
 					<h2>Recept címe</h2>
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vulputate libero quis ante euismod, dictum pulvinar justo euismod. Phasellus vehicula mi leo, non tincidunt dolor gravida vel. </p>
 				</div>
+			
 			</div>
+			<div class="pagination">
+				<span class="page">1</span>
+				<a class="page" href="">2</a>
+				<a class="page" href="">3</a>
+				<a class="page" href="">4</a>
+				<a class="page" href="">5</a>
+				<a class="page" href="">6</a>
+				<a class="page" href="">7</a>
+				<a class="page" href="">8</a>
+				<a class="page" href="">9</a>
+				<a class="page" href="">10</a>
+				<a class="page" href="">11</a>
+				<a class="page" href="">12</a>
+				<a class="page" href="">13</a>
+				<a class="page" href="">14</a>
+				<a class="page" href="">15</a>
+				<a class="page" href="">16</a>
+
+
+			</div>
+
 
 		</main>
 		
