--- a/Fekete Zoltán/Flexbox_nyers/index.html
+++ b/Fekete Zoltán/Flexbox_nyers/index.html
@@ -10,9 +10,9 @@
 <body>
 
 
-<header>
+<h1>
 	Receptek
-</header>
+</h1>
 
 
 <div class="wrapper">
@@ -57,6 +57,25 @@
 					<h2>Recept címe</h2>
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce ut ante odio. Aliquam tortor nulla, maximus at nisl id, blandit consequat lacus.</p>
 				</div>
+			</div>
+			<div class="pagination">
+				<span class="page">1</span>
+				<a class="page" href="">2</a>
+				<a class="page" href="">3</a>
+				<a class="page" href="">4</a>
+				<a class="page" href="">5</a>
+				<a class="page" href="">6</a>
+				<a class="page" href="">7</a>
+				<a class="page" href="">8</a>
+				<a class="page" href="">9</a>
+				<a class="page" href="">10</a>
+				<a class="page" href="">11</a>
+				<a class="page" href="">12</a>
+				<a class="page" href="">13</a>
+				<a class="page" href="">14</a>
+				<a class="page" href="">15</a>
+				<a class="page" href="">16</a>
+
 			</div>
 
 		</main>
