--- a/Kis-Fodor Zsombor/html/random Pontiac Firebird oldal/index1.html
+++ b/Kis-Fodor Zsombor/html/random Pontiac Firebird oldal/index1.html
@@ -19,10 +19,31 @@
     Több mint 35 éven át gyártották az F-body platform végéig. Az autó futása alatt sokszor volt sorozatok és filmekben 
     (Smokey és a Bandita, Knight Rider) és még ma is szerepel (Cobra Kai) kisebb melékszerepekben, de sokszor csúnya véggel. 
 
-    <p><a href="firstgen.html" class="gens">Első generáció 1967-1969</a></p>
-    <p><a href="secondgen.html" class="gens">Második generáció 1970-1981</a></p>
-    <p><a href="thirdgen.html" class="gens">Harmadik generáció 1982-1992</a></p>
-    <p><a href="fourthgen.html" class="gens">Negyedik generáció 1992-2002</a></p>
+    <!-- Firebird generációk-->
+    <div class="gens">
+        <img src="1967Firebird.jpg" height="300" alt="Első generációs Firebird">
+        <p><a href="firstgen.html">Első generáció 1967-1969</a></p>
+        <p>A generáció mely elkezdte ennek az ikoníkus autónak a pályafutását.</p>
+    </div>
+
+    <div class="gens">
+        <img src="1970transam.jpg" height="300" alt="Második generációs Firebird">
+        <p><a href="secondgen.html">Második generáció 1970-1981</a></p>
+        <p>a 4 közül a leghíresebb és legvadabb generáció.</p>
+    </div>
+
+    <div class="gens">
+        <img src="1982firebirdse.jpg" height="300" alt="Harmadik generációs Firebird">
+        <p><a href="thirdgen.html">Harmadik generáció 1982-1992</a></p>
+        <p>A fekete lovag megy aerodinamikájával egyik legjobb generáció lehetett volna.</p>
+    </div>
+
+    <div class="gens">
+        <img src="1993transam.jpg" height="300" alt="Negyedik generációs Firebird">
+        <p><a href="fourthgen.html">Negyedik generáció 1993-2002</a></p>
+        <p>Az utolsó 10 éve a Firebirdnek, ez után Pontiac nagyon elvesztette a mottóját és 
+            mikor már végre sínen voltak a G8-al megszünt a cég.</p>
+    </div>
 
     <h4 class="sources">Források</h4>
     <p><a href="https://en.wikipedia.org/wiki/Pontiac_Firebird" target="blank">Firebird</a></p>
