--- a/Kis-Fodor Zsombor/html/random Pontiac Firebird oldal/secondgen.html
+++ b/Kis-Fodor Zsombor/html/random Pontiac Firebird oldal/secondgen.html
@@ -21,9 +21,9 @@
 
     egy kis félrecsúszás után kiadták a 2. generációs Firebirdet. Nagy külső változáson ment át a Firebird, sokkal több 
     modellváltozat is lett, a Trans Am még mindig a legerősebb modell volt. 1972-ben egy sztrájk miatt majdnem akkor lett 
-    volna a Camaro és Firebird búcsúdala, de GM végül nem dobta el a kettő F-body kocsit.  Ebben a 11 évben 3 
-    ráncfelvarráson ment át a Firebird, leghíresebb az 1977-1978 dizájn. 1973-ban egy jóval erősebb 500$-os (mai árfolyamban 
-    994,408 Forint) Trans Am opciót adtak ki ami 2 évig volt rendelhető, az SD-455. 
+    volna a Camaro és Firebird búcsúdala, de GM végül nem dobta el a kettő F-body kocsit. 1973-ban egy jóval erősebb 
+    500$-os (mai árfolyamban 994,408 Forint) Trans Am opciót adtak ki ami 2 évig volt rendelhető, az SD-455. Ebben a 
+    11 évben 3 ráncfelvarráson ment át a Firebird, leghíresebb az 1977-1978 dizájn.
 
     <!-- engines -->
     <h3 class="secondgen">motor opciók</h3>
