--- a/Kis-Fodor Zsombor/html/random Pontiac Firebird oldal/firstgen.html
+++ b/Kis-Fodor Zsombor/html/random Pontiac Firebird oldal/firstgen.html
@@ -58,6 +58,29 @@
     nem jött ebben a szín kombinációban.
 
     <!-- pics -->
+
+    <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="1967Firebird.jpg" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="1968Firebird400.jpg" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="..." class="d-block w-100" alt="...">
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+
     <h3 class="firstgen">Képek</h3>
 
     <h3 class="pictures">1967-es Firebird</h3>
