--- a/Fuglovics Konor/Bootstrap/index.html
+++ b/Fuglovics Konor/Bootstrap/index.html
@@ -17,25 +17,25 @@ navbar komponens:
 https://getbootstrap.com/docs/4.4/components/navbar/
 -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
-	<a class="navbar-brand" href="#">Navbar</a>
+	<a class="navbar-brand" href="#">Szöveghez kattintson ide</a>
 	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 		<span class="navbar-toggler-icon"></span>
 	</button>
 
 	<div class="collapse navbar-collapse" id="navbarSupportedContent">
 		<ul class="navbar-nav mr-auto">
-			<li class="nav-item active"><a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a></li>
-			<li class="nav-item"><a class="nav-link" href="#">Link</a></li>
+			<li class="nav-item active"><a class="nav-link" href="#">Otthon <span class="sr-only">(current)</span></a></li>
+			<li class="nav-item"><a class="nav-link" href="https://www.youtube.com/watch?v=ub82Xb1C8os">Link...</a></li>
 			<li class="nav-item dropdown">
 				<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
 				<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-					<a class="dropdown-item" href="#">Action</a>
-					<a class="dropdown-item" href="#">Another action</a>
+					<a class="dropdown-item" href="#">Törlés</a>
+					<a class="dropdown-item" href="#">Semmi nincs...</a>
 					<div class="dropdown-divider"></div>
-					<a class="dropdown-item" href="#">Something else here</a>
+					<a class="dropdown-item" href="#">AAAAAAAAAAAAAAA</a>
 				</div>
 			</li>
-			<li class="nav-item"><a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a></li>
+			<li class="nav-item"><a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Nem elérhető</a></li>
 		</ul>
 
 	</div>
@@ -53,13 +53,13 @@ https://getbootstrap.com/docs/4.4/components/carousel/
 	</ol>
 	<div class="carousel-inner">
 		<div class="carousel-item active">
-			<img src="pics/slider1.jpg" class="d-block w-100" alt="...">
+			<img src="pics/slider1.png" class="d-block w-100" alt="...">
 		</div>
 		<div class="carousel-item">
 			<img src="pics/slider2.jpg" class="d-block w-100" alt="...">
 		</div>
 		<div class="carousel-item">
-			<img src="pics/slider3.jpg" class="d-block w-100" alt="...">
+			<img src="pics/slider3.png" class="d-block w-100" alt="...">
 		</div>
 	</div>
 	<a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -79,8 +79,8 @@ https://getbootstrap.com/docs/4.4/components/jumbotron/
 -->
 <div class="jumbotron jumbotron-fluid bg-info text-white">
 	<div class="container-fluid wrapper">
-		<h1 class="display-4">Fluid jumbotron</h1>
-		<p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
+		<h1 class="display-4">Teszt oldal</h1>
+		<p class="lead">Teszt oldal alszöveg</p>
 	</div>
 </div>
 
@@ -89,7 +89,7 @@ https://getbootstrap.com/docs/4.4/components/jumbotron/
 Headingse
 https://getbootstrap.com/docs/4.4/content/typography/#headings
 -->
-<h1 class="text-center text-white mb-5 display-1">Cars</h1>
+<h1 class="text-center text-white mb-5 display-1">My Favorite Windows Systems</h1>
 
 <div class="container-fluid wrapper">
 	<div class="row">
@@ -103,83 +103,44 @@ https://getbootstrap.com/docs/4.4/content/typography/#headings
 				<img src="pics/win7.png" class="card-img-top" alt="">
 				<div class="card-body">
 					<h5 class="card-title">Windows 7</h5>
-					<p class="card-text">Beautiful design, Nice sounds, no useless updates!</p>
+					<p class="card-text">Beautiful design, nice sounds, no useless updates!</p>
 					<!--
 					Button komponens
 					https://getbootstrap.com/docs/4.4/components/buttons/
 					-->
-					<a href="https://en.wikipedia.org/wiki/Windows_7" class="btn btn-warning">Learn More</a>
+					<a href="https://hu.wikipedia.org/wiki/Windows_7" class="btn btn-warning">Learn More</a>
 				</div>
 			</div>
 		</div>
 
 		<div class="col-sm-6 col-md-4 col-lg-3">
 			<div class="card text-white mb-4 bg-dark">
-				<img src="pics/image2.jpg" class="card-img-top" alt="">
+				<img src="pics/img.webp" class="card-img-top" alt="">
 				<div class="card-body">
-					<h5 class="card-title">Click this</h5>
+					<h5 class="card-title">Attention!!</h5>
 					<p class="card-text">Click this button for a free iPhone 13!</p>
-					<a href="\\.\globalroot\device\condrv\kernelconnect" class="btn btn-warning">Go somewhere...</a>
+					<a href="\\.\globalroot\device\condrv\kernelconnect" class="btn btn-warning">Learn More</a>
+					<a href="/#" class="btn btn-warning">Get the Prize!</a>
 				</div>
 			</div>
 		</div>
 		<div class="col-sm-6 col-md-4 col-lg-3">
 			<div class="card text-white mb-4 bg-dark">
-				<img src="pics/image3.jpg" class="card-img-top" alt="">
+				<img src="pics/win95.png" class="card-img-top" alt="">
 				<div class="card-body">
-					<h5 class="card-title">Card title</h5>
-					<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-					<a href="#" class="btn btn-warning">Go somewhere</a>
+					<h5 class="card-title">Windows 95</h5>
+					<p class="card-text">The UI design looks nice, It has nostalgic sounds and images. </p>
+					<a href="https://hu.wikipedia.org/wiki/Windows_95" class="btn btn-warning">Go somewhere</a>
 				</div>
 			</div>
 		</div>
 		<div class="col-sm-6 col-md-4 col-lg-3">
 			<div class="card text-white mb-4 bg-dark">
-				<img src="pics/image4.jpg" class="card-img-top" alt="">
+				<img src="pics/win98.png" class="card-img-top" alt="">
 				<div class="card-body">
-					<h5 class="card-title">Card title</h5>
-					<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-					<a href="#" class="btn btn-warning">Go somewhere</a>
-				</div>
-			</div>
-		</div>
-		<div class="col-sm-6 col-md-4 col-lg-3">
-			<div class="card text-white mb-4 bg-dark">
-				<img src="pics/image5.jpg" class="card-img-top" alt="">
-				<div class="card-body">
-					<h5 class="card-title">Card title</h5>
-					<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-					<a href="#" class="btn btn-warning">Go somewhere</a>
-				</div>
-			</div>
-		</div>
-		<div class="col-sm-6 col-md-4 col-lg-3">
-			<div class="card text-white mb-4 bg-dark">
-				<img src="pics/image6.jpg" class="card-img-top" alt="">
-				<div class="card-body">
-					<h5 class="card-title">Card title</h5>
-					<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-					<a href="#" class="btn btn-warning">Go somewhere</a>
-				</div>
-			</div>
-		</div>
-		<div class="col-sm-6 col-md-4 col-lg-3">
-			<div class="card text-white mb-4 bg-dark">
-				<img src="pics/image7.jpg" class="card-img-top" alt="">
-				<div class="card-body">
-					<h5 class="card-title">Card title</h5>
-					<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-					<a href="#" class="btn btn-warning">Go somewhere</a>
-				</div>
-			</div>
-		</div>
-		<div class="col-sm-6 col-md-4 col-lg-3">
-			<div class="card text-white mb-4 bg-dark">
-				<img src="pics/image8.jpg" class="card-img-top" alt="">
-				<div class="card-body">
-					<h5 class="card-title">Card title</h5>
-					<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-					<a href="#" class="btn btn-warning">Go somewhere</a>
+					<h5 class="card-title">Windows 98</h5>
+					<p class="card-text">Same as the others,</p>
+					<a href="https://hu.wikipedia.org/wiki/Windows_98" class="btn btn-warning">Go somewhere</a>
 				</div>
 			</div>
 		</div>
