--- a/Kis-Fodor Zsombor/forrikasussyalmalussybussy/Info_ism_forrasok_K1721/3 feladat/boobos.html
+++ b/Kis-Fodor Zsombor/forrikasussyalmalussybussy/Info_ism_forrasok_K1721/3 feladat/boobos.html
@@ -79,7 +79,8 @@
        </table> 
       
 
-    <p class="forras"> <a href="http://www.mme.hu/magyarorszagmadarai/madaradatbazis-upuepo" target="_blank" >Forrás: http://www.mme.hu/magyarorszagmadarai/madaradatbazis-upuepo</a>
+    <p class="forras"> 
+        Forrás: http://www.mme.hu/magyarorszagmadarai/madaradatbazis-upuepo
     </p>
 </body>
 </html>
