--- a/Fuglovics Konor/nyomtatás/nyomtatas.html
+++ b/Fuglovics Konor/nyomtatás/nyomtatas.html
@@ -26,11 +26,13 @@
     <div class="col-md-4 bg-torzs">
       <h3>Magasnyomtatás</h3>
       <p>A nyomtatás Kínában már a 8. században feltehetőleg ismert volt. A ma ismert legrégebbi bizonyíték egy 868-ban készült Gyémánt szútra, de a források alapján már 812-től papírpénzt is előállítottak, amelyhez nélkülözhetetlen a nyomtatás. A magasnyomtatás kezdetleges formáját, a fadúcos nyomtatást alkalmazták, amely abból állt, hogy egy kézzel vésett falapot befestékeztek, majd egy papírlapot ráterítettek, és száraz kefével a hátoldalát dörzsölve hozzásimították. Ugyanekkor már megpróbálkoztak fából faragott, szedhető írásjegyekkel is, jó néhány nyomtatott könyvet készítettek, de az eljárás nem terjedt el széles körben.</p>   
+	  <img src="kezi_szedes.jpg" class=img-thumbnail alt="Kézi szedés">
     </div>
     <div class="col-md-4">
       <h3>Síknyomtatás</h3>
       <p>1796-ban <a href="https://hu.wikipedia.org/wiki/Alois_Senefelder">Alois Senefelder</a> feltalálja a litográfiát, és ezzel együtt kidolgozta a síknyomtatás elvét. Először maratással kialakított rézlemezt használ magasnyomóformaként, majd olcsóbb anyagokat keres. Kísérletei közben mészkövet is használ, melynél véletlenül felfedezi, hogy a vizes felületen nem tapad meg a festék. Az ő nevéhez fűződik még a fémfelületről történő síknyomtatás bevezetése is.</p>
       <p>Ugyanez az elv az alapja a bádognyomtatásnak is, melyet plakátgyártásnál, konzervdoboz gyártásnál használtak. Szintén ebből fejlődött ki a ma leginkább elterjedt ofszetnyomtatás, mely szintén egy közvetett nyomtatási forma.</p>
+	  <img src="ofszet_nyomogep.jpg" class=img-thumbnail alt="Nyomógép">
     </div>
     <div class="col-md-4 bg-torzs">
       <h3>Szitanyomtatás</h3>        
@@ -38,34 +40,35 @@
     </div>
   </div>
   <div class="row">
-    <div class="col-md-6">
+    <div class="col-md-4">
       <h3>Mélynyomtatás</h3>        
       <p>A 20. század elején tökéletesítik a mélynyomtatást, melynek elve az őskorig nyúlik vissza, majd később az ötvösművészek fejlesztették tovább. A 15. századig kézzel vésték a formákat. Majd savas maratással finomabb árnyalatok visszaadását is lehetővé tették. Ez az eljárás kimondottan művészeti célokra volt használatos. Klics Károly angliai útja során megismerkedik <a href="https://hu.wikipedia.org/wiki/William_Henry_Fox_Talbot">William Henry Fox Talbot</a> találmányával, melynek lényege az, hogy bizonyos sók nagymolekulájú szerves anyagban fényérzékenyekké válnak. Emellett tanulmányozza az akkori modern textiliparban használt mélynyomó gépeket. Ezeket az ismereteket felhasználva kifejleszti a fényképészeti úton történő formakészítést, és a rácsmélynyomtatást. Lényegében az ő találmányát hívjuk ma hagyományos értelemben mélynyomtatásnak. Ezt az elvet alkalmazzák a tamponnyomtatásban is, mely hasonlóan az ofszetnyomtatáshoz, egy közvetett nyomtatási forma. Először egy rugalmas anyagra mélynyomtatással juttatják a festéket, aztán ezt az anyagot nyomják a nyomandó felületre. Az anyag rugalmassága lehetővé teszi, hogy nem csak sík felületnél használható. Manapság többek közt ajándék, és reklámtárgyak (például tollak, öngyújtók) esetében alkalmazzák. </p>
     </div>
-    <div class="col-md-6 bg-torzs">
+    <div class="col-md-4 bg-torzs">
       <h3>Digitális eljárások</h3>        
       <p>A számítástechnika fejlődésével fokozatosan épültek be a nyomdaiparba. Először a fényszedésnél jelentek meg szövegek szerkesztésénél, tördelésénél, majd a fényképészetben is elterjedtek. Ezután megjelentek a nyomóformakészítésben is. Legelterjedtebb formája az ofszetnyomtatásnál alkalmazott CTP. A személyi számítógépekhez használt nyomtatók ugyan már régóta digitális eljárásokkal működnek, de nyomdászati célokra kevés területen használják. A hagyományosan nyomóformáról történő nyomtatással szemben eléggé lassúnak mondható. Eleinte kisebb példányszámú, kevésbé igényes termékeket gyártottak vele, de napjainkban akár 4-500 példányszámú nyomatok gazdaságos, jó minőségű nyomtatására is van lehetőség. </p>
+	  <img src="nyomdagep_pultja.jpg" class=img-thumbnail alt="Nyomdagép pultja">
     </div>
-    <div class="col-md-6">
+    <div class="col-md-4">
       <h3>Plakátnyomtatás</h3>
       <p>Egy színes plakát nyomtatásának költségét meghatározó tényezők többek közt a papírlap minősége és a papírlap mérete</p>
       <p>A következő űrlapon plakátnyomtatáshoz lehet árat kalkulálni:</p>
       <form class="bg-torzs p-3 text-center">
         <label for="szelesseg">Szélesség (mm):</label>
-        <input type="text" class="form-control" id="szelesseg" min="10" max="1000" />
+        <input type="text" class="form-control" id="szelesseg" min="10" max="1000" value=297 />
         <label for="magassag">Magasság (mm):</label>
-        <input type="text" class="form-control" id="magassag" min="10" max="1400" />
+        <input type="text" class="form-control" id="magassag" min="10" max="1400" value=420 />
         <label for="ptip">Papírtípus:</label>
         <select class="form-control" id="papirtipus">
           <option value="38">Pauszpapír (115g/m³)</option>
-          <option value="32">Matt, vastag, általános papír (120g/m³)</option>
+          <option value="32" selected>Matt, vastag, általános papír (120g/m³)</option>
           <option value="45">Matt, normál, fotópapír (180g/m³)</option>
           <option value="45">Fényes, normál, fotópapír (200g/m³)</option>
           <option value="45">Szatén, normál, fotópapír (190g/m³)</option>
           <option value="65">Művész, kreatív, kartonpapír (300g/m³)</option>
         </select>
-        <input type="button" value="Kalkuláció" id="kalkulalGomb" />
-        <div>
+        <input type="button" value="Kalkuláció" id="kalkulalGomb" onclick="kalkulal()" />
+        <div id="valasz">
           <p>A kalkuláció alapja:</p>
           <ul>
             <li>területe: <span id="terulet"></span> dm<sup>2</sup></li>
